--- a/Group14_CP1406_2010_m1/m1/Assignment Synthesis Folder/index.html
+++ b/Group14_CP1406_2010_m1/m1/Assignment Synthesis Folder/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <p>
+List of Navigation Links: /Home :blanked due to use:/ /About Us/ /Community Notices/ /Events/ /Past Events/ /Membership/ /Musicians/ /Sponsors/
 </p>
 <p>
 Greetings! Welcome to the Townsville Community Music Centre's website. We hope you find the site interesting and informative, and that you can become one of our community in no time. Here at the TCMC, we have an open approach to all musical genres and feel that all music should be shared and enjoyed.
