--- a/Group14_CP1406_2010_m1/m1/Assignment Synthesis Folder/commnotices.html
+++ b/Group14_CP1406_2010_m1/m1/Assignment Synthesis Folder/commnotices.html
@@ -30,7 +30,7 @@ If you would like to take part, please call Merle Trembath 0418882633 anytime
 <p>
 Posted 21-March-15
 TCB logo CALL OUT FOR MUSOS 
-Calling all Musoâ€™s, entertainers, performers. We are looking to book performers/musicians/entertainers for a family friendly festival at the Ingham Tyto Wetlands on the 23rd of May. This inaugural annual event is a family fun day in the parklands and we are looking for appropriate acts. We are looking for a wide variety of bands and entertainers from our local and surrounding areas. 
+Calling all Musos, entertainers, performers. We are looking to book performers/musicians/entertainers for a family friendly festival at the Ingham Tyto Wetlands on the 23rd of May. This inaugural annual event is a family fun day in the parklands and we are looking for appropriate acts. We are looking for a wide variety of bands and entertainers from our local and surrounding areas. 
     </p>
     <p>
 Deadline for initial submissions 29 March 2015. 
@@ -59,7 +59,7 @@ Posted 17 March 15
 
 Would you like to see Metropolitan Opera productions screened in Townsville?
 Met Opera 2015
-The Metropolitan Operaâ€™s award-winning series of operas in HD continues featuring ten operas captured live in high definition direct from New York, and screening concurrently with the NY season. 
+The Metropolitan Opera's award-winning series of operas in HD continues featuring ten operas captured live in high definition direct from New York, and screening concurrently with the NY season. 
 Follow this link for more information: http://www.sharmillfilms.com.au/?page_id=2195#cinemas 
 
 Event Cinemas are considering bringing the Met Opera HD series to Townsville. If you would like to encourage them to go ahead, please email Alexis at support@eventcinemas.helpserve.com with a simple message such as, â€˜Please bring Met Opera to Townsvilleâ€™. You may of course add additional comments if you wish. 
