--- a/Group14_CP1406_2010_m1/m1/Assignment Synthesis Folder/event.html
+++ b/Group14_CP1406_2010_m1/m1/Assignment Synthesis Folder/event.html
@@ -11,6 +11,9 @@ Events
 Upcoming Events
 </h1>
 <p>
+List of Navigation Links: /Home/ /About Us/ /Community Notices/ /Events :blank due to use:/ /Past Events/ /Membership/ /Musicians/ /Sponsors/    
+</p>
+<p>
 SUNDAY VARIETY CONCERT 
 Presented by Friends of the Theatre 
 2pm Sunday 26 April at Pimlico Performing Arts Centre 
