--- a/Group14_CP1406_2010_m1/m1/Assignment Synthesis Folder/membership.html
+++ b/Group14_CP1406_2010_m1/m1/Assignment Synthesis Folder/membership.html
@@ -11,6 +11,9 @@ Membership Registration
     Membership Registration
     </h1>
 <p>
+List of Navigation Links: /Home/ /About Us/ /Community Notices/ /Events/ /Past Events/ /Membership :blank due to use:/ /Musicians/ /Sponsors/    
+</p>
+<p>
 Welcome to our membership page. Here, we process all of the information required to make you a part of the TCMC community. Please gill in the fields below appropriately and accurately, and you'll be one of us in no time!
 </p>
 </body>
