--- a/Group14_CP1406_2010_m1/m1/Assignment Synthesis Folder/musician.html
+++ b/Group14_CP1406_2010_m1/m1/Assignment Synthesis Folder/musician.html
@@ -10,4 +10,7 @@ Musicians
 <h1>
 
 </h1>
+<p>
+List of Navigation Links: /Home/ /About Us/ /Community Notices/ /Events/ /Past Events/ /Membership/ /Musicians :blank due to use:/ /Sponsors/    
+</p>
 </body>
