--- a/Group14_CP1406_2010_m1/m1/Assignment Synthesis Folder/pastevent.html
+++ b/Group14_CP1406_2010_m1/m1/Assignment Synthesis Folder/pastevent.html
@@ -11,6 +11,6 @@ Past Events
         Past Events
         </h1>
 <p>
-        
+List of Navigation Links: /Home/ /About Us/ /Community Notices/ /Events/ /Past Events :blank due to use:/ /Membership/ /Musicians/ /Sponsors/
 </p>
     </body>
